<resources>
    <string name="app_name">MoviesApp</string>

    <string name="text_rating">%d / 10</string>
    <string name="text_runtime">%d min</string>
    <string name="text_money">%d $</string>
    <string name="text_birthday">Birthday: %s</string>
    <string name="text_deathday">Deathday: %s</string>
    <string name="text_place_birth">Place of birth: %s</string>

    <string name="home_text_no_internet">No Internet connection</string>
    <string name="home_label_discover_movies">Discover movies in The Movie DataBase</string>
    <string name="home_hint_search">Search by movie name</string>
    <string name="home_text_show_all">See all</string>
    <string name="home_label_popular_artists">Popular Artists</string>
    <string name="home_label_popular_movies">Popular Movies</string>
    <string name="home_label_playing_movies">Now Playing Movies</string>
    <string name="home_label_top_movies">Top Rated Movies</string>
    <string name="home_label_upcoming_movies">Upcoming Movies</string>

    <string name="item_movie_text_bottom">%.2f / %s</string>

    <string name="details_text_story">Storyline</string>
    <string name="details_text_biography">Biography</string>
    <string name="details_text_images">Images</string>
    <string name="details_text_cast">Cast</string>
    <string name="details_text_show">See all</string>
    <string name="details_text_details">Details</string>
    <string name="details_text_status">Status:</string>
    <string name="details_text_budget">Budget:</string>
    <string name="details_text_revenue">Revenue:</string>
    <string name="details_text_homepage">Homepage:</string>
    <string name="details_text_similar">Similar</string>
    <string name="details_text_reviews">Reviews</string>

    <string name="item_cast_details_text_bottom">%s, %s</string>

    <string name="cast_full_tab_cast">Cast</string>
    <string name="cast_full_tab_crew">Crew</string>
</resources>